--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.13.1",
     "@zeit/next-sass": "^1.0.1",
     "next": "10.0.5",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "stripe": "^8.138.0"
   }
 }
